# Sistema_de_Conta_a_Pagar_Receber

./: .gitignore  pyproject.toml  requirements.txt
backend/: criptografia.py  main.py
backend/API/: criptografia.py  routes.py  validações.py
backend/fasAPI/: API.py
backend/models/: database.py  database_drop.py  engine.py
frontend/: index.html
frontend/css/: cadastroCliente.css  cadastroDespesa.css  cadastroFornecedor.css  cadastroItens.css  cadastroReceita.css  cadastroVendas.css  dashboard.css  despesa.css  global.css  itens.css  layout.css  login.css  receita.css  relatorio.css  vendas.css
frontend/js/: app.js  utils.js
frontend/js/pages/: cadastroCliente.js  cadastroDespesa.js  cadastroFornecedor.js  cadastroItens.js  cadastroReceita.js  cadastroVendas.js  dashboard.js  despesa.js  itens.js  layout.js  login.js  receita.js  relatorios.js  vendas.js
