[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meu-projeto"
version = "0.1.0"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "cryptography>=41.0",
    "bcrypt>=4.0",
    "sqlalchemy-utils>=0.41",
]

[tool.setuptools]
packages = ["backend"]